--- a/app/src/main/res/layout/cam_open.xml
+++ b/app/src/main/res/layout/cam_open.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical" >
     <Button
         android:id="@+id/take_photo"
+        android:background="#27A5F9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take Photo" />
+        android:textSize="25sp"
+        android:text="拍照记录" />
     <ImageView
         android:id="@+id/picture"
         android:layout_width="wrap_content"
