--- a/app/src/main/res/layout/set_update.xml
+++ b/app/src/main/res/layout/set_update.xml
@@ -1,55 +1,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     android:orientation="vertical"
-    android:background="#87CEEB">
+    android:background="#27A5F9">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_marginTop="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="30dp"
         android:orientation="horizontal" >
-        <TextView
 
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="自动更新"
-            android:textSize="20sp"
+            android:layout_marginLeft="10dp"
+            android:textColor="#FFF"
+            android:text="自动更新                 "
+            android:textSize="25sp"
             />
         <CheckBox
             android:id="@+id/update"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="50dp"/>
+
+          />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:textColor="#FFF"
             android:text="更新频率"
-            android:textSize="20sp"
+            android:textSize="25sp"
             />
         <EditText
             android:id="@+id/update_time"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="50dp"/>
+            android:layout_height="33dp"
+            android:layout_width="50dp"
+            android:layout_marginLeft="25dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:textColor="#FFF"
             android:text="小时"
-            android:textSize="20sp"
+            android:textSize="25sp"
             />
     </LinearLayout>
     <Button
         android:id="@+id/set_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_marginTop="15dp"
+        android:layout_width="70dp"
+        android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
-        android:text="设置完成"
-        android:textSize="15sp"
+        android:text="确定"
+        android:textSize="22sp"
         />
 
 </LinearLayout>  
